# compromise-wrapper

./: .flake.nix.kate-swp  README.md  flake.nix  main.py  pyproject.toml
compromise_wrapper/: MOP.py  __init__.py  julia_preamble.jl  setup_utils.py
tests/: __init__.py  multieval.py
